@@ -1,3 +1,4 @@
+* #3180: Recreate the index on mount failure. (tomeu)
 * #3374: Don't create another entry during async update. (tomeu)
 * #3058: Disable content indexing for Trial-3. (tomeu)
 
